@@ -20,7 +20,10 @@ import com.linkedin.metadata.graph.RelatedEntity;
 import com.linkedin.metadata.graph.elastic.ESGraphQueryDAO;
 import com.linkedin.metadata.graph.elastic.ESGraphWriteDAO;
 import com.linkedin.metadata.graph.elastic.ElasticSearchGraphService;
+import com.linkedin.metadata.models.registry.ConfigEntityRegistry;
+import com.linkedin.metadata.models.registry.EntityRegistryException;
 import com.linkedin.metadata.models.registry.LineageRegistry;
+import com.linkedin.metadata.models.registry.MergedEntityRegistry;
 import com.linkedin.metadata.models.registry.SnapshotEntityRegistry;
 import com.linkedin.metadata.query.filter.Filter;
 import com.linkedin.metadata.query.filter.RelationshipDirection;
@@ -30,6 +33,7 @@ import com.linkedin.metadata.search.elasticsearch.update.ESBulkProcessor;
 import com.linkedin.metadata.utils.elasticsearch.IndexConvention;
 import com.linkedin.metadata.utils.elasticsearch.IndexConventionImpl;
 import io.datahubproject.test.search.SearchTestUtils;
+import io.datahubproject.test.search.config.SearchCommonTestConfiguration;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
@@ -54,15 +58,17 @@ public abstract class SearchGraphServiceTestBase extends GraphServiceTestBase {
   @Nonnull
   protected abstract ESIndexBuilder getIndexBuilder();
 
-  private final IndexConvention _indexConvention = new IndexConventionImpl(null);
+  private final IndexConvention _indexConvention = IndexConventionImpl.NO_PREFIX;
   private final String _indexName = _indexConvention.getIndexName(INDEX_NAME);
   private ElasticSearchGraphService _client;
+  private boolean _enableMultiPathSearch =
+      GraphQueryConfiguration.testDefaults.isEnableMultiPathSearch();
 
   private static final String TAG_RELATIONSHIP = "SchemaFieldTaggedWith";
 
   @BeforeClass
   public void setup() {
-    _client = buildService();
+    _client = buildService(_enableMultiPathSearch);
     _client.configure();
   }
 
@@ -73,8 +79,23 @@ public abstract class SearchGraphServiceTestBase extends GraphServiceTestBase {
   }
 
   @Nonnull
-  private ElasticSearchGraphService buildService() {
-    LineageRegistry lineageRegistry = new LineageRegistry(SnapshotEntityRegistry.getInstance());
+  private ElasticSearchGraphService buildService(boolean enableMultiPathSearch) {
+    ConfigEntityRegistry configEntityRegistry =
+        new ConfigEntityRegistry(
+            SearchCommonTestConfiguration.class
+                .getClassLoader()
+                .getResourceAsStream("entity-registry.yml"));
+    SnapshotEntityRegistry snapshotEntityRegistry = SnapshotEntityRegistry.getInstance();
+    LineageRegistry lineageRegistry;
+    try {
+      MergedEntityRegistry mergedEntityRegistry =
+          new MergedEntityRegistry(snapshotEntityRegistry).apply(configEntityRegistry);
+      lineageRegistry = new LineageRegistry(mergedEntityRegistry);
+    } catch (EntityRegistryException e) {
+      throw new RuntimeException(e);
+    }
+    GraphQueryConfiguration configuration = GraphQueryConfiguration.testDefaults;
+    configuration.setEnableMultiPathSearch(enableMultiPathSearch);
     ESGraphQueryDAO readDAO =
         new ESGraphQueryDAO(
             getSearchClient(),
@@ -93,8 +114,19 @@ public abstract class SearchGraphServiceTestBase extends GraphServiceTestBase {
 
   @Override
   @Nonnull
-  protected GraphService getGraphService() {
+  protected GraphService getGraphService(boolean enableMultiPathSearch) {
+    if (enableMultiPathSearch != _enableMultiPathSearch) {
+      _enableMultiPathSearch = enableMultiPathSearch;
+      _client = buildService(enableMultiPathSearch);
+      _client.configure();
+    }
     return _client;
+  }
+
+  @Override
+  @Nonnull
+  protected GraphService getGraphService() {
+    return getGraphService(GraphQueryConfiguration.testDefaults.isEnableMultiPathSearch());
   }
 
   @Override
@@ -337,26 +369,26 @@ public abstract class SearchGraphServiceTestBase extends GraphServiceTestBase {
     // Without timestamps
     EntityLineageResult upstreamResult = getUpstreamLineage(datasetTwoUrn, null, null);
     EntityLineageResult downstreamResult = getDownstreamLineage(datasetTwoUrn, null, null);
-    Assert.assertEquals(new Integer(1), upstreamResult.getTotal());
-    Assert.assertEquals(new Integer(3), downstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(1), upstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(3), downstreamResult.getTotal());
 
     // Timestamp before
     upstreamResult = getUpstreamLineage(datasetTwoUrn, 0L, initialTime - 10);
     downstreamResult = getDownstreamLineage(datasetTwoUrn, 0L, initialTime - 10);
-    Assert.assertEquals(new Integer(0), upstreamResult.getTotal());
-    Assert.assertEquals(new Integer(1), downstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(0), upstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(1), downstreamResult.getTotal());
 
     // Timestamp after
     upstreamResult = getUpstreamLineage(datasetTwoUrn, initialTime + 10, initialTime + 100);
     downstreamResult = getDownstreamLineage(datasetTwoUrn, initialTime + 10, initialTime + 100);
-    Assert.assertEquals(new Integer(0), upstreamResult.getTotal());
-    Assert.assertEquals(new Integer(1), downstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(0), upstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(1), downstreamResult.getTotal());
 
     // Timestamp included
     upstreamResult = getUpstreamLineage(datasetTwoUrn, initialTime - 10, initialTime + 10);
     downstreamResult = getDownstreamLineage(datasetTwoUrn, initialTime - 10, initialTime + 10);
-    Assert.assertEquals(new Integer(1), upstreamResult.getTotal());
-    Assert.assertEquals(new Integer(3), downstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(1), upstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(3), downstreamResult.getTotal());
 
     // Update only one of the downstream edges
     Long updatedTime = 2000L;
@@ -387,20 +419,20 @@ public abstract class SearchGraphServiceTestBase extends GraphServiceTestBase {
     // Without timestamps
     upstreamResult = getUpstreamLineage(datasetTwoUrn, null, null);
     downstreamResult = getDownstreamLineage(datasetTwoUrn, null, null);
-    Assert.assertEquals(new Integer(1), upstreamResult.getTotal());
-    Assert.assertEquals(new Integer(3), downstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(1), upstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(3), downstreamResult.getTotal());
 
     // Window includes initial time and updated time
     upstreamResult = getUpstreamLineage(datasetTwoUrn, initialTime - 10, updatedTime + 10);
     downstreamResult = getDownstreamLineage(datasetTwoUrn, initialTime - 10, updatedTime + 10);
-    Assert.assertEquals(new Integer(1), upstreamResult.getTotal());
-    Assert.assertEquals(new Integer(3), downstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(1), upstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(3), downstreamResult.getTotal());
 
     // Window includes updated time but not initial time
     upstreamResult = getUpstreamLineage(datasetTwoUrn, initialTime + 10, updatedTime + 10);
     downstreamResult = getDownstreamLineage(datasetTwoUrn, initialTime + 10, updatedTime + 10);
-    Assert.assertEquals(new Integer(1), upstreamResult.getTotal());
-    Assert.assertEquals(new Integer(2), downstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(1), upstreamResult.getTotal());
+    Assert.assertEquals(Integer.valueOf(2), downstreamResult.getTotal());
   }
 
   /**
